[package]
name = "actix-todoapi"
version = "0.1.0"
authors = ["Leigh Wilson <code-tap@leighwilson.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
serde = { version = "1.0.114", features = ["derive"] }